fixed mobile issue with spacing between the first step and about section. Started the job section with two job description and the link to all anchors. It needs to add images and media, and handle a third option or similar cases

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -179,6 +179,7 @@
 }
 
 .about-section{
+  margin-top: 1000px;
   margin-left: 7.5%;
   width: 90%;
   scroll-behavior: smooth; 
@@ -343,3 +344,79 @@
     z-index: 100;
   }
 }
+
+/* End of media queries */
+
+/* Work session code */
+.job-exp-div{
+  margin-top: 350px;
+  margin-left: 7.5%;
+  width: 90%;
+  scroll-behavior: smooth;
+  color: #a8b2d1;
+  font-size: 1.5em;
+}
+
+.job-exp-div div{
+  display: flex;
+  flex-direction: row;
+}
+
+.workCard{
+  font-weight: 1500;
+  margin:auto;
+  margin-top: 80px;
+  padding: 10px;
+  border-radius: 5px;
+  width: 35%;
+  transition: .5s;
+  height: 470px;
+}
+
+#zwap{
+  border: 4px solid #61f7d4;
+}
+
+#MamixSRL{
+  border: 4px solid #66ff33;
+}
+
+.workCard:hover{
+  transform: scale(1.1);
+}
+
+.workCard h2, p{
+  margin-left: 20px;
+}
+
+.workCard a{
+  color: #a8b2d1;
+  transition: .3s;
+}
+
+.workCard a:hover{
+  color:#61f7d4;
+}
+
+.workCard h2{
+  padding: 5px;
+}
+
+.jobDate{
+  opacity: 0.7;
+}
+
+.jobDesc{
+  margin-left: 20px;
+  font-size: .7em;
+  list-style-type: circle;
+  color: #61f7d4
+}
+
+.jobDesc li{
+  color: #a8b2d1;
+  margin: 15px 0;
+}
+
+
+/* End of work session code */
